logs/gateway.log
INFO:     Will watch for changes in these directories: ['/Users/hepeng/Project/lead_depot/LeafDepot/services/api']
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [33169] using StatReload
Process SpawnProcess-1:
Traceback (most recent call last):
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/_compat.py", line 60, in asyncio_run
    return loop.run_until_complete(main)
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/server.py", line 71, in serve
    await self._serve(sockets)
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/server.py", line 78, in _serve
    config.load()
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/opt/anaconda3/envs/tobacco_env/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/hepeng/Project/lead_depot/LeafDepot/services/api/gateway.py", line 1678
    (_debug_log_dir / f'frontend_{datetime.now().strftime('%Y%m%d')}.log')
                                                           ^
SyntaxError: f-string: f-string: unmatched '('
INFO:     Stopping reloader process [33169]
